fix spacing

--- a/src/components/profile-page/styles.scss
+++ b/src/components/profile-page/styles.scss
@@ -8,6 +8,8 @@
   align-items: center;
 
   .profile-image-and-uploader {
+    height: 185px;
+
     .profile-picture {
       margin-bottom: 15px;
       border-radius: 100%;
